testsuite/poke.pkl/int-struct-type-diag-8.pk
/* { dg-do compile } */

type Foo =
  struct uint<32> /* { dg-error "total size" } */
  {
    uint<2> a;
    int<17> b;
  };
